# seaquel

./: .gitignore  AGENTS.md  CLAUDE.md  mise.toml  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.js  wdio.conf.ts
.beads/: issues.jsonl
.claude/agents/: code-simplifier.md  i18n-translator.md
.github/workflows/: e2e.yml  release.yml
docs/: sample-data.sql
docs/plans/: 2026-01-26-aggregate-functions-design.md  2026-01-26-aggregate-functions.md  2026-01-26-having-clause-design.md  2026-01-26-select-tutorial-implementation.md  2026-01-26-select-tutorial-query-builder.md  2026-01-27-query-builder-variables-design.md  2026-01-27-query-builder-variables.md  2026-01-27-unified-query-editor-design.md  2026-01-27-unified-query-editor.md  2026-01-28-maintainability-improvements.md
e2e/: connection.spec.ts  explain.spec.ts  history.spec.ts  query.spec.ts  schema.spec.ts  shortcuts.spec.ts  tabs.spec.ts
e2e-tests/: tsconfig.json
e2e-tests/helpers/: app-actions.ts  queries.ts
e2e-tests/specs/: connection-dialog.spec.ts  connections-grid.spec.ts  welcome-screen.spec.ts
e2e/fixtures/: test-fixtures.ts
e2e/mocks/: tauri-ipc.ts
messages/: ar.json  de.json  en.json  es.json  fr.json  ko.json
project.inlang/: project_id  settings.json
src/: app.html  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  theme-editor.json
src-tauri/icons/: icon.icns
src-tauri/src/: duckdb_commands.rs  git.rs  lib.rs  main.rs  mssql.rs  ssh_tunnel.rs
src/lib/: types.ts  utils.ts
(+280 files in other folders)
