[package]
name = "seaquel"
version = "2026.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seaquel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["postgres", "sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "net", "io-util"] }
tiberius = { version = "0.12", default-features = false, features = ["tokio", "chrono", "tds73", "native-tls"] }
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
base64 = "0.22"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.3.2"
arboard = "3.6.1"
image = "0.25.9"
dirs = "5"
tauri-plugin-keyring = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

